add cursor pointer

--- a/styles/menu.css
+++ b/styles/menu.css
@@ -130,6 +130,7 @@ nav {
     position: relative;
     right: 6rem;
     top: 0.5rem;
+    cursor: pointer;
   }
 }
 .heart-checkbox {
@@ -142,6 +143,7 @@ nav {
   font-size: 1.2em;
   position: relative;
   transition: background-color 0.8s ease;
+  cursor: pointer;
 }
 
 .fa-regular {
@@ -157,6 +159,7 @@ nav {
   right: 46px;
   color: transparent;
   font-size: 1.9em;
+  cursor: pointer;
   z-index: 5;
 }
 
@@ -170,6 +173,7 @@ nav {
     left: 49px;
     color: transparent;
     font-size: 1.9em;
+    cursor: pointer;
     z-index: 5;
   }
   .fa-heart {
@@ -177,6 +181,7 @@ nav {
     padding-left: 20px;
     position: relative;
     top: 0.5rem;
+    cursor: pointer;
   }
 }
 .heart-checkbox:checked + .heart-label::before {
