--- a/styles/main.scss
+++ b/styles/main.scss
@@ -267,11 +267,25 @@ header {
   background-color: $background-color_4;
   padding: 18px;
   max-width: 1440px;
+
 }
+.container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.card {
+  flex-basis: calc(50% - 10px);
+  margin-bottom: 20px;
+}
+
 
 @media (min-width: 1025px) {
   .restaurants {
-    padding: 10%;
+    padding-left: 10%;
+    padding-right: 10%;
   }
 }
 .card {
