--- a/styles/menu.css
+++ b/styles/menu.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 body {
-  margin: 0;
+  margin: 0 auto;
   padding: 0;
+  max-width: 1440px;
   font-family: "Roboto", serif;
 }
 
@@ -128,8 +129,8 @@ nav {
     padding-top: 35px;
     padding-left: 20px;
     position: relative;
-    right: 6rem;
-    top: 0.5rem;
+    right: 9rem;
+    top: 0.3rem;
     cursor: pointer;
   }
 }
@@ -155,8 +156,8 @@ nav {
   font-family: "Font Awesome 5 Free";
   font-weight: 900;
   position: relative;
-  top: 11px;
-  right: 46px;
+  top: 10px;
+  right: 94px;
   color: transparent;
   font-size: 1.9em;
   cursor: pointer;
@@ -187,8 +188,8 @@ nav {
 .heart-checkbox:checked + .heart-label::before {
   background: linear-gradient(180deg, rgb(151, 71, 255) 0%, rgb(228, 112, 218) 100%);
   -webkit-background-clip: text;
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
+          background-clip: text;
+  color: transparent;
 }
 
 /****MENU***/
@@ -250,7 +251,7 @@ nav {
   background-color: #FFFFFF;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
   margin: 12px;
-  width: 634px;
+  width: 100%;
   height: 69px;
   animation: fadeInLeft 0.7s ease forwards;
   animation-delay: 0.1s;
@@ -264,6 +265,10 @@ nav {
 .card-txt__subtitle {
   font-size: 17px;
   font-weight: 300;
+}
+
+.menu-card {
+  width: 90%;
 }
 
 .menu-label {
@@ -355,15 +360,6 @@ nav {
     font-size: 25px;
     padding-right: 130px;
   }
-  .card {
-    display: flex;
-    box-sizing: border-box;
-    justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    height: 69px;
-    width: 350px;
-  }
   .card:hover .card-txt {
     width: calc(100% - 75px);
     overflow: hidden;
@@ -432,7 +428,7 @@ footer ul {
     margin-left: 50px;
   }
 }
-@media (min-width: 769px) and (max-width: 1300px) {
+@media (min-width: 769px) and (max-width: 10px) {
   #LogoFooter {
     position: relative;
     right: 0;
