--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -19,8 +19,9 @@ $white: #FFFFFF;
 
 
 body {
-    margin: 0;
+    margin: 0 auto;
     padding: 0;
+    max-width: 1440px;
     font-family: 'Roboto', serif;
 }
 
@@ -158,8 +159,8 @@ nav {
         padding-top: 35px;
         padding-left: 20px;
         position: relative;
-        right: 6rem;
-        top: 0.5rem;
+        right: 9rem;
+        top: 0.3rem;
         cursor: pointer;
     }
 }
@@ -187,8 +188,8 @@ nav {
     font-family: 'Font Awesome 5 Free';
     font-weight: 900;
     position: relative;
-    top: 11px;
-    right: 46px;
+    top: 10px;
+    right: 94px;
     color: transparent;
     font-size: 1.9em;
     cursor: pointer;
@@ -221,9 +222,8 @@ nav {
 
 .heart-checkbox:checked+.heart-label::before {
     background: linear-gradient(180deg, rgba(151, 71, 255, 1) 0%, rgba(228, 112, 218, 1) 100%);
-    -webkit-background-clip: text;
     background-clip: text;
-    -webkit-text-fill-color: transparent;
+    color: transparent;
 }
 
 /****MENU***/
@@ -289,7 +289,7 @@ nav {
     background-color: $white;
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
     margin: 12px;
-    width: 634px;
+    width: 100%;
     height: 69px;
     animation: fadeInLeft 0.7s ease forwards;
     animation-delay: 0.10s;
@@ -306,7 +306,9 @@ nav {
   }
   
 
-
+  .menu-card {
+    width: 90%;
+  }
 
 .menu-label {
     width: 100%;
@@ -403,17 +405,6 @@ nav {
         padding-right: 130px;
     }
 
-    .card {
-        display: flex;
-        box-sizing: border-box;
-        justify-content: center;
-        flex-direction: column;
-        align-items: center;
-        height: 69px;
-        width:  350px;
-
-    }
-
     .card:hover .card-txt {
         width: calc(100% - 75px);
         overflow: hidden;
@@ -492,7 +483,7 @@ footer ul {
     }
 
 }
-@media (min-width: 769px) and (max-width: 1300px) {
+@media (min-width: 769px) and (max-width: 10px){
     #LogoFooter {
         position: relative;
         right: 0;
