--- a/styles/main.scss
+++ b/styles/main.scss
@@ -143,7 +143,7 @@ h1 {
   margin-top: 36px;
   color: $color_3;
   box-sizing: border-box;
-  margin-bottom: 50px;
+  margin-bottom: 34px;
   transition: all 0.7s ease;
 }
 
@@ -204,9 +204,16 @@ header {
 }
 
 .reservation__title {
-  font-size: 24px;
+  font-size: 25px;
   font-weight: 700;
   padding-top: 10px;
+}
+
+@media screen and (min-width:1025px) {
+  .reservation__title {
+    font-size: 40px;
+  }
+
 }
 
 .reservation__subtitle {
@@ -236,14 +243,17 @@ header {
   }
 }
 
-.operation__line {
+.operation ul {
 
-    padding-left: 0;
-    text-align: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  padding-left: 0;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+
 }
+
+.operation__line {}
 
 .operation__title {
   font-size: 24px;
@@ -270,7 +280,7 @@ header {
   cursor: pointer;
   position: relative;
   box-sizing: border-box;
-  
+
 }
 
 .operation__text {
@@ -291,14 +301,15 @@ header {
 }
 
 @media screen and (min-width: 768px) {
-  
-.container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-  gap: 25px;
+
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    gap: 25px;
+  }
 }
-}
+
 .card {
   flex-basis: calc(47% - 10px);
   margin-bottom: 20px;
@@ -311,6 +322,7 @@ header {
     padding-right: 10%;
   }
 }
+
 .card {
   border-radius: 15px;
   background-color: $background-color_5;
@@ -364,15 +376,15 @@ header {
 
   .fa-heart {
     position: absolute;
-   bottom: 40px;
+    bottom: 40px;
     right: 28px;
   }
 }
 
 .heart-checkbox:checked+.heart-label::before {
-  background: linear-gradient(180deg, rgba(151, 71, 255, 1) 0%, rgba(228, 112, 218, 1) 100%);
+  background: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 140%);
   background-clip: text;
-  transition: $background-color_6 10s ease-in-out;
+  transition: background 10s ease-in-out;
 }
 
 .fa-heart:before {
@@ -432,6 +444,7 @@ footer ul {
   margin-bottom: 0;
   list-style: none;
 }
+
 .footer-container {
   display: flex;
   justify-content: center;
@@ -441,25 +454,26 @@ footer ul {
 @media(max-width: 768px) {
 
   footer ul {
-      display: flex;
-      flex-direction: column;
-      align-items: flex-start;
-      gap: 8px;
-      list-style: none;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 8px;
+    list-style: none;
   }
 
   footer {
-      padding-left: 0;
+    padding-left: 0;
   }
+
   .footer-container {
-      margin: 0;
-      display: flex;
-  flex-direction: column;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
   }
 
   #LogoFooter {
-      padding-left: 42px;
-      padding-top: 5px;
+    padding-left: 42px;
+    padding-top: 5px;
   }
 }
 
@@ -467,24 +481,25 @@ footer ul {
 
 
   footer li {
-      margin-left: 10px;
+    margin-left: 10px;
   }
 
   footer ul {
-      display: flex;
-      justify-content: center;
+    display: flex;
+    justify-content: center;
   }
 
   .second {
-      margin-left: 50px;
+    margin-left: 50px;
   }
 
 }
-@media (min-width: 769px) and (max-width: 10px){
+
+@media (min-width: 769px) and (max-width: 10px) {
 
   .footer-container {
     display: flex;
-  justify-content: start;
+    justify-content: start;
   }
 }
 
