--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -153,8 +153,7 @@ nav {
     }
 }
 
-@media screen and (max-width: 769px)
-{
+@media screen and (max-width: 769px) {
     .fa-heart {
         padding-top: 35px;
         padding-left: 20px;
@@ -211,6 +210,7 @@ nav {
         cursor: pointer;
         z-index: 5;
     }
+
     .fa-heart {
         padding-top: 35px;
         padding-left: 20px;
@@ -298,17 +298,17 @@ nav {
 .card-txt {
     font-size: 18px;
     font-weight: 700;
-  }
+}
 
-  .card-txt__subtitle {
+.card-txt__subtitle {
     font-size: 17px;
     font-weight: 300;
-  }
-  
+}
 
-  .menu-card {
+
+.menu-card {
     width: 90%;
-  }
+}
 
 .menu-label {
     width: 100%;
@@ -430,6 +430,7 @@ footer ul {
     margin-bottom: 0;
     list-style: none;
 }
+
 .footer-container {
     display: flex;
     justify-content: center;
@@ -448,10 +449,11 @@ footer ul {
     footer {
         padding-left: 0;
     }
+
     .footer-container {
         margin: 0;
         display: flex;
-    flex-direction: column;
+        flex-direction: column;
     }
 
     #LogoFooter {
@@ -483,17 +485,19 @@ footer ul {
     }
 
 }
-@media (min-width: 769px) and (max-width: 10px){
+
+@media (min-width: 769px) and (max-width: 10px) {
     #LogoFooter {
         position: relative;
         right: 0;
         margin-right: 20px;
     }
+
     .footer-container {
-      display: flex;
-    justify-content: start;
+        display: flex;
+        justify-content: start;
     }
-  }
+}
 
 .footer-text {
     display: flex;
