--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -420,99 +420,90 @@ Footer {
     color: white;
     flex-direction: column;
     padding: 22px 20px;
-}
-
-footer ul {
+  }
+  
+  footer ul {
     display: flex;
     flex-direction: row;
     justify-content: end;
     align-items: stretch;
     margin-bottom: 0;
     list-style: none;
-}
-
-.footer-container {
+  }
+  
+  .footer-container {
     display: flex;
     justify-content: center;
-}
-
-@media(max-width: 768px) {
-
+    flex-direction: row-reverse;
+  }
+  
+  @media(max-width: 768px) {
+  
     footer ul {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-start;
-        gap: 8px;
-        list-style: none;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 8px;
+      list-style: none;
     }
-
+  
     footer {
-        padding-left: 0;
+      padding-left: 0;
     }
-
+  
     .footer-container {
-        margin: 0;
-        display: flex;
-        flex-direction: column;
+      margin: 0;
+      display: flex;
+      flex-direction: column;
     }
-
+  
     #LogoFooter {
-        padding-left: 42px;
-        padding-top: 5px;
+      padding-left: 42px;
+      padding-top: 5px;
     }
-}
-
-@media (min-width: 768px) {
-
-    #LogoFooter {
-        display: flex;
-        align-items: flex-end;
-        position: absolute;
-        right: 50px;
-    }
-
+  }
+  
+  @media (min-width: 768px) {
+  
+  
     footer li {
-        margin-left: 10px;
+      margin-left: 10px;
     }
-
+  
     footer ul {
-        display: flex;
-        justify-content: center;
+      display: flex;
+      justify-content: center;
     }
-
+  
     .second {
-        margin-left: 50px;
+      margin-left: 50px;
     }
-
-}
-
-@media (min-width: 769px) and (max-width: 10px) {
-    #LogoFooter {
-        position: relative;
-        right: 0;
-        margin-right: 20px;
-    }
-
+  
+  }
+  
+  @media (min-width: 769px) and (max-width: 10px) {
+  
     .footer-container {
-        display: flex;
-        justify-content: start;
+      display: flex;
+      justify-content: start;
     }
-}
-
-.footer-text {
+  }
+  
+  .footer-text {
     display: flex;
     align-items: center;
-}
-
-#LogoFooter {
+  }
+  
+  #LogoFooter {
     width: 100px;
     height: 20px;
     filter: brightness(0) invert(1);
     padding-top: 15px;
-}
-
-.fa-utensils,
-.fa-handshake-angle {
+    padding-left: 45px;
+  }
+  
+  .fa-utensils,
+  .fa-handshake-angle {
     color: white;
     padding-right: 10px;
-}
+  }
