--- a/styles/main.css
+++ b/styles/main.css
@@ -389,7 +389,8 @@ footer ul {
 
 .footer-container {
   display: flex;
-  justify-content: center;
+  padding-right: 50px;
+  padding-top: 20px;
   flex-direction: row-reverse;
 }
 
@@ -410,7 +411,7 @@ footer ul {
     flex-direction: column;
   }
   #LogoFooter {
-    padding-left: 42px;
+    padding-left: 59px;
     padding-top: 5px;
   }
 }
