--- a/styles/menu.css
+++ b/styles/menu.css
@@ -386,7 +386,9 @@ footer ul {
 
 .footer-container {
   display: flex;
-  justify-content: center;
+  padding-right: 50px;
+  padding-top: 20px;
+  flex-direction: row-reverse;
 }
 
 @media (max-width: 768px) {
@@ -406,17 +408,11 @@ footer ul {
     flex-direction: column;
   }
   #LogoFooter {
-    padding-left: 42px;
+    padding-left: 59px;
     padding-top: 5px;
   }
 }
 @media (min-width: 768px) {
-  #LogoFooter {
-    display: flex;
-    align-items: flex-end;
-    position: absolute;
-    right: 50px;
-  }
   footer li {
     margin-left: 10px;
   }
@@ -429,11 +425,6 @@ footer ul {
   }
 }
 @media (min-width: 769px) and (max-width: 10px) {
-  #LogoFooter {
-    position: relative;
-    right: 0;
-    margin-right: 20px;
-  }
   .footer-container {
     display: flex;
     justify-content: start;
@@ -449,6 +440,7 @@ footer ul {
   height: 20px;
   filter: brightness(0) invert(1);
   padding-top: 15px;
+  padding-left: 45px;
 }
 
 .fa-utensils,
