--- a/styles/main.css
+++ b/styles/main.css
@@ -326,10 +326,10 @@ header {
   }
 }
 .heart-checkbox:checked + .heart-label::before {
-  background: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 140%);
+  background-image: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 140%);
   -webkit-background-clip: text;
           background-clip: text;
-  transition: background 10s ease-in-out;
+  transition: background 5s ease;
 }
 
 .fa-heart:before {
@@ -367,7 +367,6 @@ header {
     color: transparent;
     font-size: 1.9em;
     z-index: 5;
-    transition: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 140%) 5s ease-in-out;
   }
 }
 /*******FOOTER******/
