--- a/styles/main.scss
+++ b/styles/main.scss
@@ -382,9 +382,9 @@ header {
 }
 
 .heart-checkbox:checked+.heart-label::before {
-  background: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 140%);
+  background-image: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 140%);
   background-clip: text;
-  transition: background 10s ease-in-out;
+  transition: background 5s ease;
 }
 
 .fa-heart:before {
@@ -423,7 +423,6 @@ header {
     color: transparent;
     font-size: 1.9em;
     z-index: 5;
-    transition: $background-color_6 5s ease-in-out;
   }
 }
 
