--- a/styles/main.css
+++ b/styles/main.css
@@ -206,11 +206,10 @@ header {
 }
 
 .operation ul {
-  padding-left: 0;
-  text-align: center;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  width: 95%;
 }
 
 .operation__title {
@@ -222,9 +221,19 @@ header {
   .operation__title {
     padding-left: 9%;
   }
+  .operation__button {
+    width: 23%;
+  }
+  .operation ul {
+    padding-left: 0;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
 }
 .operation__button {
-  width: 23%;
+  width: 100%;
   border-radius: 20px;
   background-color: #F6F6F6;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
@@ -328,7 +337,6 @@ header {
 .heart-checkbox:checked + .heart-label::before {
   background-image: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 140%);
   -webkit-background-clip: text;
-          background-clip: text;
   transition: background 5s ease;
 }
 
