--- a/styles/main.scss
+++ b/styles/main.scss
@@ -243,17 +243,14 @@ header {
   }
 }
 
+ 
+  
 .operation ul {
-
-  padding-left: 0;
-  text-align: center;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-
+  flex-direction: column;
+  align-items: center;
+  width: 95%;
 }
-
-.operation__line {}
 
 .operation__title {
   font-size: 24px;
@@ -264,10 +261,24 @@ header {
   .operation__title {
     padding-left: 9%;
   }
+
+  .operation__button {
+    width: 23%;
+  }
+
+  .operation ul {
+
+    padding-left: 0;
+    text-align: center;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+
+  }
 }
 
 .operation__button {
-  width: 23%;
+  width: 100%;
   border-radius: 20px;
   background-color: $background-color_4;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
@@ -383,7 +394,7 @@ header {
 
 .heart-checkbox:checked+.heart-label::before {
   background-image: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 140%);
-  background-clip: text;
+  -webkit-background-clip: text;
   transition: background 5s ease;
 }
 
