--- a/styles/main.scss
+++ b/styles/main.scss
@@ -391,51 +391,20 @@ header {
   }
 }
 
-.heart-checkbox:checked+.heart-label::before {
-  background-image: linear-gradient(193deg, #9356DC -11.44%, #FF79DA 140%);
-  -webkit-background-clip: text;
-  transition: background 5s ease;
-}
-
-.fa-heart:before {
-  content: "\f004";
-  z-index: 1;
-  font-size: 1.2em;
-  position: relative;
-}
-
-
 .fa-regular {
   font-weight: 400;
 }
 
-.heart-label::before {
-  content: '\f004';
-  font-family: 'Font Awesome 5 Free';
-  font-weight: 900;
-  position: absolute;
-  bottom: 28px;
-  right: 27px;
-  color: transparent;
-  font-size: 1.9em;
-  z-index: 5;
-  cursor: pointer;
-}
-
-@media (max-width: 768px) {
-  .heart-label::before {
-    content: '\f004';
-    font-family: 'Font Awesome 5 Free';
-    font-weight: 900;
-    position: absolute;
-    bottom: 24px;
-    right: 27px;
-    color: transparent;
-    font-size: 1.9em;
-    z-index: 5;
+.full-heart{
+  opacity: 0;
+  transition-property: all;
+  transition-duration: 1s;
   }
-}
 
+  .full-heart:hover{
+  opacity: 1;
+  color: #9747ff;
+  }
 /*******FOOTER******/
 
 Footer {
