--- a/styles/menu.scss
+++ b/styles/menu.scss
@@ -224,7 +224,7 @@ nav {
     background: linear-gradient(180deg, rgba(151, 71, 255, 1) 0%, rgba(228, 112, 218, 1) 100%);
     background-clip: text;
     color: transparent;
-    transition: background 5s ease;
+    transition: background 5s ease 5s;
 }
 
 /****MENU***/
@@ -289,7 +289,7 @@ nav {
     border-radius: 15px;
     background-color: $white;
     box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
-    margin: 12px;
+    margin: 12px 0px;
     width: 100%;
     height: 69px;
     animation: fadeInLeft 0.7s ease forwards;
