--- a/styles/menu.css
+++ b/styles/menu.css
@@ -190,7 +190,7 @@ nav {
   -webkit-background-clip: text;
           background-clip: text;
   color: transparent;
-  transition: background 5s ease;
+  transition: background 5s ease 5s;
 }
 
 /****MENU***/
@@ -251,7 +251,7 @@ nav {
   border-radius: 15px;
   background-color: #FFFFFF;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
-  margin: 12px;
+  margin: 12px 0px;
   width: 100%;
   height: 69px;
   animation: fadeInLeft 0.7s ease forwards;
