--- a/styles/menu.css
+++ b/styles/menu.css
@@ -35,7 +35,7 @@ a {
   display: flex;
 }
 .top_image img {
-  width: 100vw;
+  width: 100%;
   height: 350px;
   -o-object-fit: cover;
      object-fit: cover;
@@ -78,6 +78,7 @@ header {
   padding-top: 25px;
   padding-bottom: 15px;
   height: 44px;
+  max-width: 1440px;
 }
 
 #LogoHeader {
@@ -124,73 +125,56 @@ nav {
   padding-left: 22px;
 }
 
-@media screen and (max-width: 769px) {
-  .fa-heart {
-    padding-top: 35px;
-    padding-left: 20px;
-    position: relative;
-    right: 9rem;
-    top: 0.3rem;
+.heart-label {
+  width: 28px;
+  height: 28px;
+  cursor: pointer;
+  position: relative;
+  display: flex;
+  top: 25px;
+  left: -105px;
+}
+
+@media (min-width: 768px) {
+  .heart-label {
+    width: 28px;
+    height: 28px;
     cursor: pointer;
+    position: relative;
+    display: flex;
+    top: 27px;
+    left: 25px;
   }
 }
-.heart-checkbox {
+.heart-icon {
+  font-size: 1.7rem;
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+input {
   display: none;
 }
 
-.fa-heart:before {
-  content: "\f004";
-  z-index: 1;
-  font-size: 1.2em;
-  position: relative;
-  transition: background-color 0.8s ease;
-  cursor: pointer;
+/* État initial du cœur */
+.heart-checkbox:not(:checked) + .heart-label .solid-heart {
+  opacity: 0;
+  transition: 1s;
 }
 
-.fa-regular {
-  font-weight: 400;
-}
-
-.heart-label::before {
-  content: "\f004";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  position: relative;
-  top: 10px;
-  right: 94px;
-  color: transparent;
-  font-size: 1.9em;
-  cursor: pointer;
-  z-index: 5;
-}
-
-@media screen and (min-width: 769px) {
-  .heart-label::before {
-    content: "\f004";
-    font-family: "Font Awesome 5 Free";
-    font-weight: 900;
-    position: relative;
-    bottom: -10px;
-    left: 49px;
-    color: transparent;
-    font-size: 1.9em;
-    cursor: pointer;
-    z-index: 5;
-  }
-  .fa-heart {
-    padding-top: 35px;
-    padding-left: 20px;
-    position: relative;
-    top: 0.5rem;
-    cursor: pointer;
-  }
-}
-.heart-checkbox:checked + .heart-label::before {
-  background: linear-gradient(180deg, rgb(151, 71, 255) 0%, rgb(228, 112, 218) 100%);
+/* État cliqué du cœur */
+.heart-checkbox:checked + .heart-label .solid-heart {
+  opacity: 1;
+  background: linear-gradient(#ff79da 3%, #9356dc 120%);
   -webkit-background-clip: text;
-          background-clip: text;
-  color: transparent;
-  transition: background 5s ease 5s;
+  -webkit-text-fill-color: transparent;
+  transition: 1s;
+}
+
+/* Masquer l'icône régulière lorsque le cœur est cliqué */
+.heart-checkbox:checked + .heart-label .fa-regular {
+  opacity: 0;
 }
 
 /****MENU***/
@@ -374,6 +358,7 @@ Footer {
   color: white;
   flex-direction: column;
   padding: 22px 20px;
+  max-width: 1440px;
 }
 
 footer ul {
