--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 /****** General *****/
 @keyframes loader-line-animation {
   0%, 40%, 100% {
@@ -339,53 +338,32 @@ header {
     right: 0;
   }
 }
-.heart {
-  position: relative;
-  z-index: 3;
-  display: flex;
-  justify-content: flex-end;
-  margin-top: -50px;
-  margin-right: 20px;
-  margin-bottom: 20px;
-}
-
-.heart-label {
-  width: 28px;
-  height: 28px;
-  cursor: pointer;
-  position: relative;
-  display: flex;
-}
-
 .heart-icon {
   font-size: 1.7rem;
   position: absolute;
-  top: 0;
-  left: 0;
+  bottom: 35px;
+  right: 25px;
 }
 
-input {
-  display: none;
+.fa-regular {
+  background: transparent;
+  display: block;
 }
 
-/* État initial du cœur */
-.heart-checkbox:not(:checked) + .heart-label .solid-heart {
+.fa-solid {
+  background-color: transparent;
   opacity: 0;
-  transition: 1s;
-}
-
-/* État cliqué du cœur */
-.heart-checkbox:checked + .heart-label .solid-heart {
-  opacity: 1;
-  background: linear-gradient(#ff79da 3%, #9356dc 120%);
+  font-weight: 700;
+  background: linear-gradient(180deg, #FF79DA, #9356DC);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  transition: 1s;
+  -moz-text-fill-color: transparent;
+  transition: opacity 0.5s ease-in-out;
 }
 
-/* Masquer l'icône régulière lorsque le cœur est cliqué */
-.heart-checkbox:checked + .heart-label .fa-regular {
-  opacity: 0;
+.fa-solid:hover {
+  cursor: pointer;
+  opacity: 1;
 }
 
 /*******FOOTER******/
